feat: update articles

--- a/content/blog/2025-11-25-using-ai.md
+++ b/content/blog/2025-11-25-using-ai.md
@@ -3,7 +3,7 @@ title = "How to develop software with AI in 2025"
 slug = "develop-software-with-ai-2025"
 +++
 
-<img style="width: 100vw;" src="https://yella-blog-assets.s3.us-west-2.amazonaws.com/images/jpdolls.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=ASIAXUWSHVH4Y7AXMPP3%2F20251223%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20251223T220710Z&X-Amz-Expires=300&X-Amz-Security-Token=IQoJb3JpZ2luX2VjEE4aCXVzLXdlc3QtMiJIMEYCIQCvgjLUnuENjp87l7mW5EGLLC2B5fzci06P%2Ffu7GBQyzgIhANN8eh0IpHiGej8aGMpBcB2Ll4vsCxl1%2Bqkuh%2BrQMFAqKvECCBcQAxoMNTI1NTAwNjU2MTIxIgxa6eMSxovdlZviZ3MqzgLX0fPASBM%2FxSV1Lrl8mLOEIa72V7hiYQLoEJ%2F7eF7avyHc5TtGA59ZJvX1a4ye0GgNbNVeNWzJWwih9kpCrtgKST61RBvI0b1hWQWJ1nWyPKBaha7e5V4EXdkX8WpUbAm70g7MyZybWeRqQosAdfskQ7wqgXiallDB9dxNmXa0dnkS%2BpY%2BWvH%2F2I9MOaUPVIHMBX%2Fo30t2w0ttCRjBdk5zKpyUpHXrXYzjl9AUjXXpSCJSkXTjSxeLNgw2%2F6BP1HGoeNCBUcD1%2FIRR522gMSFj9TB0onPBWYpRBDG8Vhy1OYNA4LZFVAal%2Bus0uiPHk0YS6jF9Rmtuf%2FSdBdxUMc8KFB9uHoGFQexOyNGklW3tgE4vWXBxQL027tVnu1NoBReklVO17yDzklYhMcKfPZLBMd6xnDwvYznRam%2FFoc1lTI95Ou7cEl%2Fqt5YAg8C%2BMKHtq8oGOqwCpt5Tzd%2B%2B6YjTZ4H6oz88HF%2BOPYtyuBpLpBLXr5oV0QsDc4UBh35fORHVKl70on9QyKTa4bXVMAzLC%2B2WNvFycGxud8iIHMb44wBv2YrU3OmBWCcaglfkkvTLGc8iPgO9R6q5mHqEjwNmhZ4AaToWv9zWJyvi4keMR3jnkD1HXY1ZbG7qR3jNkQ%2B1urucX2Q0jhWr0mqrBIs4lCFO8vKb4Ui%2Bf63eMw1ibAaw1Rs7egWgV5ioSiE0OSby0n375bpaIoFG7aD49%2FMUg2mDrbmQjVw8fP7bekFDLUq5cp1k5RUkxZvPg9Wn%2FVdDo1c11RNOMq8nNy7WRETm%2FEgqvL%2FM8FhnR7eM%2FpQ4W%2BcbAZJ7rNFETEKh2TbSN%2BAFPawxmEszURZ7szqqVGo%2F4Imd&X-Amz-Signature=1817f27f5153f688ce839fcc7b467a2137db9b5b120323a8ecd9f414f376af70&X-Amz-SignedHeaders=host&response-content-disposition=inline" />
+<img style="width: 100vw;" src="https://d3bphourhbt2ew.cloudfront.net/images/colored_statues.jpg" />
 
 Since December 2022, I have experimented with AI for coding. Early tools were crude, requiring code to be copied and pasted between the chatbot and the editor. Eventually, platforms like GitHub Copilot emerged, providing AI code completion in editors such as VSCode. Coding in editors is very helpful and feels like pair programming with a colleague while working remotely. The difference is that instead of another human, a prediction engine (LLM) is on the other side.
 
