feat: show blog post dates

--- a/content/blog/2025-11-25-using-ai.md
+++ b/content/blog/2025-11-25-using-ai.md
@@ -1,6 +1,7 @@
 +++
 title = "How to develop software with AI in 2025"
 slug = "develop-software-with-ai-2025"
+date = "2025-11-25"
 +++
 
 <img style="width: 100vw;" width="1600" height="900" src="https://d3bphourhbt2ew.cloudfront.net/images/colored_statues.jpg" />
