refactor: improve using-ai post

--- a/content/blog/2025-11-25-using-ai.md
+++ b/content/blog/2025-11-25-using-ai.md
@@ -6,94 +6,77 @@ date = "2025-11-25"
 
 <img style="width: 100vw;" width="1600" height="900" src="https://d3bphourhbt2ew.cloudfront.net/images/colored_statues.jpg" />
 
-Since December 2022, I have experimented with AI for coding. Early tools were crude, requiring code to be copied and pasted between the chatbot and the editor. Eventually, platforms like GitHub Copilot emerged, providing AI code completion in editors such as VSCode. Coding in editors is very helpful and feels like pair programming with a colleague while working remotely. The difference is that instead of another human, a prediction engine (LLM) is on the other side.
+Since December 2022, I’ve been experimenting with AI for coding. The first tools were clunky and required copy‑pasting between a chatbot and an editor. Then GitHub Copilot and similar products brought AI into editors like VSCode. That in‑editor experience feels like pair programming with a remote teammate—except your partner is a prediction engine (LLM).
 
+In 2025, “vibe coding” is a real trend: assembling software with AI in the loop. Agentic tools like Claude Code, Codex, and Amp CLI are becoming common. Living in the San Francisco Bay Area over the past three years, I’ve seen this shift up close.
 
-In 2025, Vibe Coding is a trend for developing code that can be assembled into functioning software. As part of vibe coding, agentic coding (with tools like Claude Code, Codex, Amp CLI, etc.) is becoming increasingly popular among developers. I am lucky enough to have lived in the San Francisco Bay Area for the past three years and witnessed this AI coding revolution firsthand.
+I use AI in three practical modes:
 
-I mainly use AI in three different modes for developing software:
+1. AI as a co‑pilot
+2. AI as a debugger
+3. AI as a time saver
 
-1. AI as a Co-pilot
-
-2. AI as a Debugger
-
-3. AI as a Time Saver
-
-In this article, I will go through each mode and explain my observations on treating AI in each, talk about common pitfalls in AI coding and how to overcome them. I am not going into topics like: What should be your CLAUDE.md file ? etc. That is for some other time.
+This post covers how I use each mode and the pitfalls to avoid. I won’t get into topics like what your `CLAUDE.md` should look like—that’s for another time.
 
 ## AI as a Co-pilot
-A co-pilot in a flight assists the captain with take-off and landing, monitors the weather, and communicates with flight controllers.
 
-Similarly, AI as a co-pilot helps a developer share the workload for developing parts of the codebase and utilities. But as a captain, you need to make sure that the AI implementation has following:
+A co‑pilot assists the captain with takeoff and landing, monitors conditions, and communicates with controllers. Similarly, AI can share the workload for parts of a codebase and utility work. But as the captain, you still need to confirm:
 
-1. Is output of acceptable quality ?
+1. Is the output acceptable quality?
+2. Does it follow existing paradigms and dependencies?
+3. Is it secure?
+4. Could it lead to destructive operations?
 
-2. Does the output use existing paradigms & dependencies ?
+Current AI systems are weak at reasoning about second‑ and third‑order consequences. That responsibility stays with you, and it’s the core skill of effective AI‑assisted development.
 
-3. Is output secure from vulnerabilities ?
+### Tips for reviewing AI work as a co‑pilot
 
-4. Does output leads to a destructive operation ?
-
-The current AI's capability is not great at considering the second and third-order consequences of an outcome. Therefore, one must always do that job as a captain and guide AI. This is a vital quality in working with AI as a co-pilot.
-
-### Tips for reviewing AI work as a Co-pilot
-
-Look for inefficient operations
-
-Look for dangerous operations
-
-Look for new dependencies
+- Look for inefficient operations.
+- Look for dangerous operations.
+- Look for new dependencies.
 
 ## AI as a Debugger
 
-As a developer, AI is wonderful at debugging code or configuration files generated in unfamiliar domains.
+AI is excellent at debugging unfamiliar code or configuration. Humans debug sequentially—one issue at a time. AI can scan a problem and surface multiple issues in one pass. That’s where it delivers the most value.
 
-Humans, while debugging, solve one problem at a time; therefore, they work sequentially, whereas AI can perform a forward pass and identify multiple issues in a single attempt. This is where AI delivers the greatest value. When you are stuck in tough situations, taking help from AI can unblock you quickly and also reveal other problems which you'll eventually face.
+It’s also a learning opportunity. I keep a journal of issues AI finds and fixes, then slow down to understand the root cause before moving on.
 
-AI as a debugger also provides an opportunity to learn debugging skills from AI without spending too much time on actual debugging. I maintain a journal of debugged items every time I see AI spotting an issue and fixing it. Instead of rushing, I try to understand the root cause and absorb it completely before I move on.
+### Tips while using AI as a debugger
 
-## Tips while using AI as a debugger
-
-Slow down
-
-Understand the conditions that lead to failure
+- Slow down.
+- Understand the conditions that led to failure.
 
 ## AI as a Time Saver
 
-AI offers many opportunities to optimize your daily workflows, which are slow to create but fast to abandon. For ex, you may need to switch your work laptop, reinstall the developer environment, or do the same thing N times (Creating Dockerfiles, GitHub Actions, Shell scripts, etc.). AI can easily do these repetitive tasks to save you time so that you can focus on other important stuff in your life. With the help of AI, I created a Docker image for an Ubuntu dev box with most of the important tools & packages, which would have taken me a lot of time previously.
+AI saves time on workflows that are slow to set up but easy to abandon. Examples include switching laptops, rebuilding dev environments, or repeating tasks (Dockerfiles, GitHub Actions, shell scripts). I used AI to create a Docker image for an Ubuntu dev box with all the right tools—something that would have taken much longer manually.
 
-AI can also save time understanding a given codebase, which used to take days when introduced to a new project. This use case is seriously underrated, but using agentic AI to add a project to the context and ask questions is a great value from AI.
+It also speeds up comprehension of a new codebase. What used to take days can be accelerated by loading a project into context and asking targeted questions. This use case is underrated.
 
-What does AI do ?
+What does AI do?
 ---
 
-Crafts Dockerfiles, Shell Scripts, or any other boring tasks that take effort to write but are easy to abandon
+- Drafts Dockerfiles, shell scripts, and other repetitive tasks.
+- Helps you map and understand large codebases.
 
-Understand large code bases.
-
-How can you save time ?
+How can you save time?
 ---
 
-Delegating boring tasks
+- Delegate repetitive setup and scripting tasks (Dockerfiles, CI, shell scripts).
+- Use AI to summarize projects and draft design docs before you refine them.
 
-Summarizing projects & documenting design
+Working in these three modes keeps you sharp and engaged, while still sharpening your ability to observe change.
 
-Finally, working with AI in these three modes will always keep you in the game, therefore retaining your skill in observing changes.
-
-A few things to consider
 There are a few things one must not forget while developing code with AI:
 
-Always run sensitive operations in a containerized sandbox.
+- Always run sensitive operations in a containerized sandbox.
+- Never share personal information with AI (easy to slip into debugging logs).
+- Reverse‑delegate tasks from AI back to yourself to practice coding.
 
-Never share personal information with AI (Easy to slip in debugging logs)
+Finally, I don’t use AI as a replacement for myself. It lacks business context and emotion, and can lead me down the wrong path if it takes full control.
 
-Reverse delegate tasks from AI to yourself to practice coding
+People may think that in 2025 AI usage is radically different, but the fundamentals remain. The principles above stay true no matter how powerful the tools get.
 
-Finally, I don’t use AI as a replacement for myself. It lacks business context and emotion, so it may lead me down the wrong path if it takes complete control.
-
-One might think that in 2025, people will use AI in an advanced way, but remember that fundamental principles remain the same across all kinds of work. The rules I presented above are universal, irrespective of how powerful the AI gets in the future.
-
-Thanks for reading this human-written article!
+Thanks for reading this human‑written article!
 
 ## References
 
